<resources>
    <string name="app_name">Workable</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item">Item</string>
    <string name="todo">TODO</string>
    <string name="amount">amount</string>
    <string name="recent_listed_jobs">Recent listed jobs</string>
    <string name="enter_the_job_details_below">Enter the job details below</string>
    <string name="job_title">Job title :</string>
    <string name="ph_no">Ph no:</string>
    <string name="location1">Location:</string>
    <string name="fee">fee:</string>
    <string name="remark">remark:</string>
    <string name="submit">SUBMIT</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_location">Enter Location</string>
    <string name="enter_phone_number">Enter Phone number</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="preferred_time">Preferred Time:</string>
    <string name="enter_fee_in">Enter fee in ₹</string>
    <string name="time">time</string>
    <string name="ex_1_30pm">Ex- 1:30pm</string>
    <string name="amount_in">amount = ₹</string>
    <string name="sign_up">SIGN UP</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
</resources>