<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RecentFragment"
    android:background="@color/white"
    >


    <TextView
        android:background="#D9FAFA"
        android:id="@+id/title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_job_details_below"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:autoSizeTextType="uniform"
        app:fontFamily="serif" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/job_title"
        android:textColor="@color/black"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/ed1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/title2"
        android:layout_marginTop="28dp"
        android:layout_toEndOf="@id/textView5"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:hint="@string/enter_title"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="34dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/ph_no"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textColorHint="@color/black"/>

    <EditText
        android:id="@+id/ed2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/ed1"
        android:layout_marginTop="28dp"
        android:layout_toEndOf="@id/textView6"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="34dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/location1"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textColorHint="@color/black"/>

    <EditText
        android:id="@+id/ed3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/textView7"
        android:layout_alignParentStart="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="26dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/enter_location"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ed3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="34dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/fee"
        android:textColor="@color/black"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/ed4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/ed3"
        android:layout_marginTop="32dp"
        android:layout_toEndOf="@id/textView8"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:hint="@string/enter_fee_in"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ed4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="34dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/preferred_time"
        android:textColor="@color/black"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/ed5"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/ed4"
        android:layout_marginTop="32dp"
        android:layout_toEndOf="@id/textView9"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:hint="@string/ex_1_30pm"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <!--<RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_below="@id/ed4"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal">

        <RadioButton
            android:textColor="@color/black"
            android:id="@+id/radiobtn1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/morning" />

        <RadioButton
            android:textColor="@color/black"
            android:id="@+id/radiobtn2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/afternoon" />

        <RadioButton
            android:textColor="@color/black"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/evening"
            />

    </RadioGroup> -->

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_below="@id/ed4"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="80dp"
        android:text="@string/submit"
        android:textColor="#2C0B00"
        app:backgroundTint="#72C6D1" />


</RelativeLayout>