<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="210dp"
    android:background="@color/white"
    android:layout_margin="10dp"
    app:cardElevation="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border"
        android:padding="5dp">

        <TextView
            android:id="@+id/titleview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:text="@string/item"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/locview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleview"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:text="@string/location1"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/locview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleview"
            android:layout_marginStart="5dp"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@+id/locview"
            android:text="@string/location1"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/feeview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/locview"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"

            android:text="@string/fee"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/amtview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/locview"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="49dp"
            android:text="@string/amount_in"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/amtview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/locview"
            android:layout_marginStart="2dp"
            android:layout_marginTop="49dp"
            android:layout_toEndOf="@id/amtview"
            android:text="@string/amount"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/timeview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/locview"
            android:layout_marginStart="22dp"
            android:layout_marginTop="9dp"
            android:layout_toEndOf="@id/amtview2"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <Button
            android:id="@+id/delbtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"

            android:layout_marginStart="0dp"
            android:layout_marginBottom="-4dp"
            android:backgroundTint="#0048FF"
            android:text="Contact and accept " />


    </RelativeLayout>


</androidx.cardview.widget.CardView>
